java-k8s/java-mysql-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: java-mysql-app-ingress 
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: java-mysql-app.com 
    http:
      paths:
      - backend:
          service:
            name: java-mysql-app-service 
            port:
              number: 8080
        pathType: Prefix
        path: /
